# wefen_C

android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/zeze/wefeng/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  Define.h  Image_engine.cpp  Image_engine.h  code_enum.h  config.h  face.cpp  face.h  native-lib.cpp  yolo.cpp  yolo.h  yolo_ncnn.cpp  yolo_ncnn.h
android/app/src/main/java/com/zeze/: SkinReasoning.java  skinTestResult.java
android/app/src/main/java/com/zeze/entity/: SkinDetectSeqResultEntity.java
android/app/src/main/java/com/zeze/modelTest/: TestTradition.java  modeTest.java  segmentationModel.java
android/app/src/main/java/com/zeze/wefeng/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/zeze/wefeng/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
